[Add] Make trainer interface consistent (+ logo update)
Make logo from <img> into a `background-image` for the <a> that
surrounded the <img>, so that it can be change via stylesheets.

Which is easier. For me. So there.

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -33,7 +33,7 @@
   {# Unfortunately we need this wrapper to position the footer at the bottom of the page #}
   <div id="sticky-footer-wrap">
     <header class="top-bar {% block header-classes %}{% endblock %}">
-      <a href="/" title="Global Change Lab home"><img src="{% static 'images/gcl-logo.png' %}" id="gcl-logo" /></a>
+      <a href="/" title="Global Change Lab home" id="gcl-logo"></a>
 
       <div id="logged-in-menu">
       {% if user.is_authenticated %}
