--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block body-classes %} trainer-interface {% endblock %}
+
 {% block content %}
 <div id="save-button" style="position:absolute; top: 20px; left: 30px;">
   <a class="button"><span class="icon save"></span>Save</a>
