[Fix] Typo: extra '}' after templatetag in skill_view.html

--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -3,7 +3,7 @@
 {% load permissionif %}
 {% load user_skills %}
 
-{% block body-classes %}skill-view{% endblock %}}
+{% block body-classes %}skill-view{% endblock %}
 
 {% block content %}
 <div class="page-buttons">
