[Add] User progress page (user_progress)

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -43,6 +43,7 @@
           <span class="icon triangle-down red"></span>
         </a>
         <ul id="drop" class="f-dropdown" data-dropdown-content>
+          <li><a href="{% url 'user_progress' %}">View my progress</a></li>
           <li><a href="{% url 'profile' %}">View my profile</a></li>
           <li><a href="{% url 'account_logout' %}">Sign out</a></li>
         </ul>
