--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,6 +6,7 @@
 @import "scss/base";
 @import "scss/messages";
 @import "scss/trainer_dashboard";
+@import "scss/statistics";
 @import "scss/trainingbit_view";
 @import "scss/trainingbit_grid";
 @import "scss/trainingbit_edit";
