--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -33,56 +33,58 @@
   {# Unfortunately we need this wrapper to position the footer at the bottom of the page #}
   <div id="sticky-footer-wrap">
     <header class="top-bar {% block header-classes %}{% endblock %}">
-      <a href="/" title="Global Change Lab home" id="gcl-logo"></a>
+      <div class="row">
+        <a href="/" title="Global Change Lab home" id="gcl-logo"></a>
 
-      <div id="logged-in-menu">
-      {% if user.is_authenticated %}
-        <a href="#" class="button" data-dropdown="drop">
-          <span class="icon user"></span>
-          {{ user.username }}
-          <span class="icon triangle-down red"></span>
-        </a>
-        <ul id="drop" class="f-dropdown" data-dropdown-content>
-          <li><a href="{% url 'user_progress' %}">View my progress</a></li>
-          <li><a href="{% url 'profile' %}">View my profile</a></li>
-          <li><a href="{% url 'account_logout' %}">Sign out</a></li>
-        </ul>
-      {% else %}
-        <a href="{% url 'account_login' %}" class="button">
-          Sign in
-          <span class="icon triangle-down red"></span>
-        </a>
-      {% endif %}
-      </div>
-      
-      {% block trainer_dashboard_button %}
-      {% permission request.user has 'trainingbit.create'  %}
-      <div id="trainer-dashboard-button">
-        <a href="{% url 'trainer_dashboard' %}" class="button">Trainer Dashboard</a>
-      </div>
-      {% endpermission %}
-      {% endblock %}
-
-      {% block admin_dashboard_button %}
-      {% if request.user.is_admin  %}
-      <div id="admin-dashboard-button">
-        <a href="{% url 'admin_dashboard' %}" class="button">Admin Dashboard</a>
-      </div>
-      {% endif %}
-      {% endblock %}
-
-      <section class="top-bar-section">
-        {% if request.user.is_authenticated %}
-        <!-- Left Nav Section -->
-        <ul class="left">
-          <li><a href="{% url 'skills:skills_overview' %}">Skills</a></li>
-          <li><a href="{% url 'skills:trainingbits_overview' %}">Bits</a></li>
-          <li><a href="/user/list">Users</a></li>
-          <li><a href="/user/updates">Updates <span class="update-count">6</span></a></li>
-        </ul>
+        <div id="logged-in-menu">
+        {% if user.is_authenticated %}
+          <a href="#" class="button" data-dropdown="drop">
+            <span class="icon user"></span>
+            {{ user.username }}
+            <span class="icon triangle-down red"></span>
+          </a>
+          <ul id="drop" class="f-dropdown" data-dropdown-content>
+            <li><a href="{% url 'user_progress' %}">View my progress</a></li>
+            <li><a href="{% url 'profile' %}">View my profile</a></li>
+            <li><a href="{% url 'account_logout' %}">Sign out</a></li>
+          </ul>
+        {% else %}
+          <a href="{% url 'account_login' %}" class="button">
+            Sign in
+            <span class="icon triangle-down red"></span>
+          </a>
         {% endif %}
+        </div>
+        
+        {% block trainer_dashboard_button %}
+        {% permission request.user has 'trainingbit.create'  %}
+        <div id="trainer-dashboard-button">
+          <a href="{% url 'trainer_dashboard' %}" class="button">Trainer Dashboard</a>
+        </div>
+        {% endpermission %}
+        {% endblock %}
 
-      </section>
+        {% block admin_dashboard_button %}
+        {% if request.user.is_admin  %}
+        <div id="admin-dashboard-button">
+          <a href="{% url 'admin_dashboard' %}" class="button">Admin Dashboard</a>
+        </div>
+        {% endif %}
+        {% endblock %}
+
+        <section class="top-bar-section">
+          {% if request.user.is_authenticated %}
+          <!-- Left Nav Section -->
+          <ul class="left">
+            <li><a href="{% url 'skills:skills_overview' %}">Skills</a></li>
+            <li><a href="{% url 'skills:trainingbits_overview' %}">Bits</a></li>
+            <li><a href="/user/list">Users</a></li>
+            <li><a href="/user/updates">Updates <span class="update-count">6</span></a></li>
+          </ul>
+          {% endif %}
+
+        </section>
+      </div>
     </header>
     <div id="content" class="{% block content-classes %}{% endblock %}">
         {% block content %}{% endblock %}
@@ -92,32 +94,34 @@
   {# End wrapper for content in "sticky footer"-scheme #}
 
   <footer class="{% block footer-classes %}{% endblock %}">
-    {% block footer %}
-    <div class="row" id="footer-links">
-      <div class="large-4 columns">
-        <h6>About Global Change Lab</h6>
-        <a href="#">Terms of service</a>
-        <a href="#">about us</a>
-        <a href="#">read our blog</a>
-        <a href="#">Help and support</a>
-        <a href="#">Contact</a>
+    <div class="row">
+      {% block footer %}
+      <div class="row" id="footer-links">
+        <div class="large-4 columns">
+          <h6>About Global Change Lab</h6>
+          <a href="#">Terms of service</a>
+          <a href="#">about us</a>
+          <a href="#">read our blog</a>
+          <a href="#">Help and support</a>
+          <a href="#">Contact</a>
+        </div>
+        <div class="large-4 columns">
+          <h6>Training extras</h6>
+          <a href="#">Search for a training</a>
+          <a href="#">All training</a>
+          <a href="#">How to apply</a>
+        </div>
+        <div class="large-4 columns">
+          <h6>Who we are</h6>
+          <a href="#">Training principals</a>
+          <a href="#">Who we work with</a>
+          <a href="#">GP</a>
+          <a href="#">News</a>
+          <a href="#">Contact</a>
+        </div>
       </div>
-      <div class="large-4 columns">
-        <h6>Training extras</h6>
-        <a href="#">Search for a training</a>
-        <a href="#">All training</a>
-        <a href="#">How to apply</a>
-      </div>
-      <div class="large-4 columns">
-        <h6>Who we are</h6>
-        <a href="#">Training principals</a>
-        <a href="#">Who we work with</a>
-        <a href="#">GP</a>
-        <a href="#">News</a>
-        <a href="#">Contact</a>
-      </div>
+      {% endblock %}
     </div>
-    {% endblock %}
   </footer>
   <script>$(document).foundation();</script>
 </body>
