[Update] Change .page-buttons to be `position: absolute`
instead of `float: right` which was pushing `display: block` elements
downwards, when they shouldn't.

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -16,6 +16,7 @@ $gcl-browngray: #E8E7D6;  // Info-box
 $gcl-red: #ED1C24;
 $gcl-blue: #4B81BF;
 
+$page-buttons-overlay: absolute;
 
 %stencil-font {
   font-family: 'Allerta Stencil', sans-serif;
