Training bit statistics

--- a/global_change_lab/templates/partials/statistics_list.html
+++ b/global_change_lab/templates/partials/statistics_list.html
@@ -1,6 +1,5 @@
 {% load static %}
-
-<table id="{{ table_id }}">
+<table id="{{ table_id }}" class="skills_table">
   <thead>
     <th class="sort" data-sort="name">Name</th>
     <th class="sort" data-sort="in_progress">Started</th>
@@ -8,7 +7,7 @@
   </thead>
   <tbody class="list">
 {% for item in items %}
-    <tr>
+    <tr class="parent" data-id="{{ item.id }}">
       <td class="name">{{ item.name }}</td>
       <td class="in_progress">{{ item.users_in_progress.count }}</td>
       <td class="completed">{{ item.users_completed.count }}</td>
@@ -16,6 +15,26 @@
 {% endfor %}
   </tbody>
 </table>
+
+{% for item in items %}
+<table id="subskill-{{ item.id }}" class="tb_table">
+  <thead>
+    <th>Name</th>
+    <th>Started</th>
+    <th>Finished</th>
+  </thead>
+  <tbody class="list">
+    {% for trainingbit in item.trainingbits.all %}
+    <tr class="parent">
+      <td class="name">{{trainingbit.name }}</td>
+      <td class="in_progress">{{trainingbit.users_in_progress.count}}</td>
+      <td class="completed">{{trainingbit.users_completed.count}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% endfor %}
+
 
 <script src="{% static 'listjs/list.min.js' %}"></script>
 <script>
@@ -25,4 +44,15 @@ var options = {
 };
 
 var trainingbit_list = new List('{{ table_id }}', options);
+
+$(".skills_table tr").click(function() {
+  var $target = $("#subskill-"+$(this).data('id'));
+
+  if ($target.css('display') === 'table') {
+    $target.hide();
+  } else {
+    $(".tb_table").hide();
+    $target.show();
+  }
+});
 </script>
