--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -9,19 +9,29 @@
 <div id="admin-dashboard">
   <h1>Administrator Dashboard</h1>
   <hr>
-  <div class="row">
-    <div class="large-6 columns">
-      <h3>Current number of users</h3>
-      <div class="admin-datablock" id="admin-num-users">
-        <p>Currently there are {{ num_users }} users in GCL.</p>
+  <section id="statistics">
+    <div class="row">
+      <div class="large-6 columns">
+        <h3>Current number of users</h3>
+        <div class="admin-datablock" id="admin-num-users">
+          <p>Currently there are {{ num_users }} users in GCL.</p>
+        </div>
+      </div>
+      <div class="large-6 columns">
+        <h3>Number of users signing up during last month</h3>
+        <div id="admin-datablock">
+          <p>Last month there were {{ num_users_last_month }} users signing up.</p>
+        </div>
       </div>
     </div>
-    <div class="large-6 columns">
-      <h3>Number of users signing up during last month</h3>
-      <div id="admin-datablock">
-        <p>Last month there were {{ num_users_last_month }} users signing up.</p>
-      </div>
-    </div>
-  </div>
+  </section>
+  <hr>
+  <section id="download">
+    <h2>Data download</h2>
+    <ul>
+    <li><a href="/admin/users.csv">List of users</a></li>
+    <li><a href="/admin/statistics.csv">Statistics of user signups</a></li>
+    </ul>
+  </section>  
 </div>
 {% endblock %}
