--- a/global_change_lab/templates/partials/statistics_list.html
+++ b/global_change_lab/templates/partials/statistics_list.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load staticfiles %}
+
 <table id="{{ table_id }}" class="skills_table">
   <thead>
     <th class="sort" data-sort="name">Name</th>
@@ -36,7 +37,6 @@
 {% endfor %}
 
 
-<script src="{% static 'listjs/list.min.js' %}"></script>
 <script>
 // List.js
 var options = {
