--- a/global_change_lab/templates/admin_dashboard.html
+++ b/global_change_lab/templates/admin_dashboard.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+
 {% block admin_dashboard_button %}
 {% endblock %}
 
 {% block body-classes %} trainer-interface {% endblock %}
+{% block scripts %}
+  <script src="{% static 'global_change_lab/trainer.min.js' %}"></script>
+{% endblock %}
 
 {% block content %}
 <div id="admin-dashboard">
