--- a/global_change_lab/templates/trainingbit_statistics.html
+++ b/global_change_lab/templates/trainingbit_statistics.html
@@ -2,6 +2,9 @@
 {% load staticfiles %}
 
 {% block body-classes %} trainer-interface {% endblock %}
+{% block scripts %}
+  <script src="{% static 'global_change_lab/trainer.min.js' %}"></script>
+{% endblock %}
 
 {% block content %}
 
