--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -2,6 +2,9 @@
 {% load staticfiles %}
 
 {% block body-classes %} trainer-interface {% endblock %}
+{% block scripts %}
+  <script src="{% static 'global_change_lab/trainer.min.js' %}"></script>
+{% endblock %}
 
 {% block content %}
 
