--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -1,13 +1,76 @@
 {% extends "base.html" %}
 
+{% load socialaccount %}
+
 {% block content %}
+
+<div id="login-modal" class="reveal-modal small" data-reveal>
+  <div class="row">
+    <div class="small-7 columns">
+      <h3>Sign in</h3>
+      <form>
+        <input type="text" name="email" placeholder="example@example.org">
+        <input type="password" name="email">
+        <button>Sign in</button>
+      </form>
+    </div>
+    <div class="small-5 columns signup">
+      <h3>Sign up via...</h3>
+      <ul>
+        <li><a class="secondary button" href="#" data-reveal-id="signup-modal">Email</a></li>
+        <li><a class="secondary button" href="{% provider_login_url "facebook" %}">Facebook</a></li>
+        <li><a class="secondary button" href="{% provider_login_url "twitter" %}">Twitter</a></li>
+        <li><a class="secondary button" href="{% provider_login_url "google" %}">Google</a></li>
+      </ul>
+      {# <a href="{% provider_login_url "openid" openid="https://www.google.com/accounts/o8/id" next="/success/url/" %}">Google</a> #}
+    </div>
+  </div>
+
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+<div id="signup-modal" class="reveal-modal small" data-reveal>
+  <form method="POST" action="{% url 'account_signup' %}">
+    <h3>Sign up</h3>
+    <div class="row">
+      <div class="small-7 columns">
+          {% csrf_token %}
+          <label><div>E-mail</div>         <input type="text" name="email" placeholder="example@example.org"></label>
+          <label><div>Name</div>           <input type="text" name="username"></label>
+          <label><div>Password</div>       <input type="password" name="password1"></label>
+          <label><div>Repeat password</div><input type="password" name="password2"></label>
+          <input type="hidden" name="next" value="{% url 'profile' %}">
+      </div>
+      <div class="small-5 columns signup">
+        <label>
+          <div class="row">
+            <div class="columns small-1">
+              <input type="checkbox" name="terms">
+            </div>
+            <div class="columns small-10">
+              I agree to the Terms of Service and Privacy Policy of The Global Change Lab
+            </div>
+          </div>
+      </label>
+      </div>
+    </div>
+    <div>
+      <button>Sign up</button>
+    </div>
+
+  </form>
+
+  <a class="close-reveal-modal">&#215;</a>
+</div>
+
+
+
 <div id="front-page-greeter">
   <h2>Change the world</h2><br>
   <h1>Bit by Training Bit</h1>
   <p>The Global Change Lab
   is a training hub for
   global activists</p>
-  <a href="{% url 'account_signup' %}" class="button join">Join us <span class="icon add-user"></span></a>
+  <a href="{% url 'account_signup' %}"  data-reveal-id="login-modal" class="button join">Join us <span class="icon add-user"></span></a>
 </div>
 <div class="row" id="front-page-cols">
   <div class="medium-4 columns">
