[Add] `SiteConfiguration` model with `analytics_code` field
`SiteConfiguration.analytics_code` is for tracking scripts from
analytics   platforms such as Google Analytics or Clicky.
You can copy/paste the code into the field in the administration panel
/admin/global_change_lab/siteconfiguration/

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 {% load permissionif %}
+{% load solo_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -125,5 +126,9 @@
     </div>
   </footer>
   <script>$(document).foundation();</script>
+
+  {% get_solo 'global_change_lab.SiteConfiguration' as site_config %}
+  {{ site_config.analytics_code|safe }}
+
 </body>
 </html>
